<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingslabel" />

        <TextView
            android:id="@+id/presencetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presencelabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/ChangeStatusSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/contactstv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactslabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/RosterList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:stackFromBottom="false" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/addcontact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:hint="@string/addcontacthint"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <Button
            android:id="@+id/addcontactbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_addcontacticon" />
    </LinearLayout>

</LinearLayout>